fixed + in button styling issue on safari

--- a/src/styles/components/_searchbar.scss
+++ b/src/styles/components/_searchbar.scss
@@ -31,7 +31,7 @@
             background-color: $red;
             width: 34px;
             height: 34px;
-            font-size: 28px;
+            font-size: 20px;
             cursor: pointer;
         }
     }
