--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -148,7 +148,7 @@
   background-color: #FF0000;
   width: 34px;
   height: 34px;
-  font-size: 28px;
+  font-size: 20px;
   cursor: pointer;
 }
 
